# open-finance-pydanticAI

./: .cursorrules  .gitignore  README.md  README_FR.md  pyproject.toml  requirements.txt
app/: config.py  gradio_app.py  langfuse_config.py  langfuse_datasets.py  langfuse_evaluation.py  langfuse_integration.py  logfire_config.py  logfire_evaluation.py  logfire_metrics.py  main.py  mitigation_strategies.py  models.py  prompt_manager.py  utils.py  validation.py
docs/: FINAL_MERGE_STATUS.md  MERGE_READY.md  MERGE_SUMMARY.md  agents_context.md  deployment_checklist.md  financial_libraries_recommendations.md  generation_limits.md  langfuse_api_update_needed.md  langfuse_compatibility.md  langfuse_mcp_findings.md  logfire_setup.md  python313_compatibility_test.md  qwen3_specifications.md  reasoning_models.md
examples/: README.md  SWIFT_IMPROVEMENTS.md  __init__.py  agent_1.py  agent_2.py  agent_2_compliance.py  agent_2_tools.py  agent_2_tools_improved.py  agent_2_tools_quant.py  agent_2_wrapped.py  agent_3.py  agent_3_multi_step.py  agent_4.py  agent_4_compliance.py  agent_5.py  agent_option_pricing.py  compare_endpoints.py  evaluate_all_agents.py  evaluate_all_agents_results.json  judge_agent.py  run_all_and_judge.py  run_all_evaluations.py  run_langfuse_evaluation.py  run_logfire_evaluation.py  run_pydantic_evals.py  swift_models.py  test_agent_3_workflow.py  test_tool_calls_simple.py  test_var_calculations.py
